Mostly done with 3.2, but still want to adjust line thickness to be larger.

--- a/EDLD652_Lab4.Rmd
+++ b/EDLD652_Lab4.Rmd
@@ -103,18 +103,19 @@ Using the "scale_manual_color" approach seems to allow more control here, as you
 
 ```{r}
 penguinscount <- penguins %>% count(year, species)
-CountxYear1 <- ggplot() +
-  geom_line(data = penguinscount, x = year, y = n, group = species) +   # Draw the line
-  geom_point(color = "red", size = 2) +   # Add points for clarity
-  labs(
-    title = "Penguin Counts by Year and Species",
-    x = "Year",
-    y = "Count"
-  ) +
+penguinscount <- as.data.frame(penguinscount)
+penguinscount
+CountxYear1 <- ggplot(penguinscount, aes(x = year, y = n)) + 
+  geom_line(aes(color=species))+
+  scale_color_manual(name='Species', labels=c('Adelie', 'Chinstrap', 'Gentoo'),
+                     values=c('red', 'gray', 'gray'))+ 
+  labs(title = "Penguin Count by Year", x = "Year", y = "Count")+
+  scale_x_continuous(breaks = seq(2007, 2009, by = 1))+
   theme_minimal()  # Clean theme
 CountxYear1
 
 ```
+
 
 
 
