--- a/EDLD652_Lab4.Rmd
+++ b/EDLD652_Lab4.Rmd
@@ -106,15 +106,38 @@ penguinscount <- penguins %>% count(year, species)
 penguinscount <- as.data.frame(penguinscount)
 penguinscount
 CountxYear1 <- ggplot(penguinscount, aes(x = year, y = n)) + 
-  geom_line(aes(color=species))+
+  geom_line(aes(color=species, size = 1.5))+
   scale_color_manual(name='Species', labels=c('Adelie', 'Chinstrap', 'Gentoo'),
                      values=c('red', 'gray', 'gray'))+ 
   labs(title = "Penguin Count by Year", x = "Year", y = "Count")+
-  scale_x_continuous(breaks = seq(2007, 2009, by = 1))+
-  theme_minimal()  # Clean theme
+  scale_x_continuous(breaks = seq(2007, 2009, by = 1))
 CountxYear1
 
 ```
+# Part 4: Accessibility Check
+**4.1**  Take one of your plots from Part 1 or 2 and test it for colorblind accessibility.
+```{r}
+cvd_grid(LengthxBodyMass3)
+UpdatedLengthxBodyMass3 <- ggplot(penguins, aes(x = flipper_length_mm, y = body_mass_g, color = bill_length_mm)) + geom_point(size = 3, alpha = 0.7) + labs(title = "Scatterplot of Flipper Length vs. Body Mass by Bill Length", x = "Flipper Length", y = "Body Mass") + scale_color_continuous_sequential(palette = "Blues") + theme_minimal()
+UpdatedLengthxBodyMass3
+```
+**4.2** Demonstrate double encoding by creating a scatterplot that uses both color AND shape to distinguish groups.
+```{r}
+FlipperxBillDE <- ggplot(penguins, aes(x = flipper_length_mm, y = bill_length_mm, color = species, shape = species)) + geom_point(size = 3, alpha = 0.7) + labs(title = "Scatterplot of Flipper Length vs. Bill Length by Species", x = "Flipper Length", y = "Bill Length") + scale_color_brewer(palette = "Dark2") + theme_minimal()
+FlipperxBillDE
+```
+**Reflection** 
+Adding shape can help improve accessibility by increasing the distinction between groups. 
+# Part 5: Avoiding Common Problems
+**5.1** Create an example showing the “too many colors” problem, then fix it using selective highlighting and labels with geom_text_repel().
+```{r}
+
+```
+
+
+
+
+
 
 
 
