--- a/EDLD652_Lab4.Rmd
+++ b/EDLD652_Lab4.Rmd
@@ -97,7 +97,7 @@ FlipperxBill2 <- ggplot(penguins, aes(x = flipper_length_mm, y = bill_length_mm,
 FlipperxBill2
 ```
 **Reflection** 
-Using the "scale_manual_color" approach seems to allow more control here, as you could be very specific with which color you want to ouse for the highlighting. 
+Using the "scale_manual_color" approach seems to allow more control here, as you could be very specific with which color you want to use for the highlighting. 
 
 **3.2** Create a line plot showing penguin counts by year and species. Highlight only Adelie penguins while keeping other species visible in gray.
 
@@ -131,10 +131,15 @@ Adding shape can help improve accessibility by increasing the distinction betwee
 # Part 5: Avoiding Common Problems
 **5.1** Create an example showing the “too many colors” problem, then fix it using selective highlighting and labels with geom_text_repel().
 ```{r}
-FlipperxBillBad <- ggplot(penguins, aes(x = flipper_length_mm, y = bill_length_mm, color = bill_length_mm)) + geom_point(size = 3, alpha = 0.7) + labs(title = "Scatterplot of Flipper Length vs. Bill Length by Species", x = "Flipper Length", y = "Bill Length") + scale_color_manual("rainbow") + theme_minimal()
-FlipperxBillBad
-```
+summary(penguins)
+FlipperxBillBad1 <- ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = flipper_length_mm)) + geom_point(size = 3, alpha = 0.7) + labs(title = "Scatterplot of Bill Length vs. Flipper Length", x = "Bill Length", y = "Flipper Length") + scale_color_gradientn(colors = c("red", "orange", "yellow", "green", "blue", "light blue", "violet", "pink", "white")) + theme_dark()
+FlipperxBillBad1
 
+FlipperxBillGood <- ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point(size = 3, alpha = 0.7) + labs(title = "Scatterplot of Bill Length vs. Flipper Length", x = "Bill Length", y = "Flipper Length") + scale_color_manual(name='Species', labels=c('Adelie', 'Chinstrap', 'Gentoo'),
+                     values=c('orange', 'gray', 'gray')) + theme_minimal()
+FlipperxBillGood
+```
+**5.2** 
 
 
 
